--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,12 @@
         <link rel="stylesheet" href="css/index.css" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+        <script src="https://unpkg.com/leaflet-routing-machine@3.2.7/dist/leaflet-routing-machine.js"></script>
         <title>Gra</title>
     </head>
     <body>
         <div class="app">
-            <div id="quiz"></div>
+            <div id="quiz">
                 <div id="question"></div>
                 <label for="userAnswer">Podaj odpowiedź:</label>
                 <input type="text" id="userAnswer" />
